[gd_scene load_steps=2 format=3 uid="uid://b8406mfce1o2e"]

[ext_resource type="Script" uid="uid://bxrwlu2xxhiuu" path="res://question_gui.gd" id="1_fl6cr"]

[node name="Question Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fl6cr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_top = -275.0
offset_right = 425.0
grow_horizontal = 2
grow_vertical = 0

[node name="Love" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Love"

[node name="Like" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Like"

[node name="Unsure" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Unsure"

[node name="Dislike" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Dislike"

[node name="Hate" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Hate
"

[node name="Question" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "The Question"

[connection signal="pressed" from="HBoxContainer/Love" to="." method="_on_love_pressed"]
[connection signal="pressed" from="HBoxContainer/Like" to="." method="_on_like_pressed"]
[connection signal="pressed" from="HBoxContainer/Unsure" to="." method="_on_unsure_pressed"]
[connection signal="pressed" from="HBoxContainer/Dislike" to="." method="_on_dislike_pressed"]
[connection signal="pressed" from="HBoxContainer/Hate" to="." method="_on_hate_pressed"]
